fix: fixed font-size and alignment on headers and paragraphs

--- a/src/input.css
+++ b/src/input.css
@@ -14,7 +14,7 @@
   }
 
   h1 {
-    @apply font-bold text-customBlue text-[2.5rem] leading-[3.125rem] md:text-[3.5rem] md:leading-[4rem];
+    @apply font-bold text-customBlue text-[2rem] sm:text-[2.5rem] sm:leading-[3.125rem] md:text-[3.5rem] md:leading-[4rem] text-center md:text-left max-w-[500px];
   }
 
   h2 {
@@ -26,7 +26,7 @@
   }
 
   p {
-    @apply font-light text-[1rem] leading-[1.75rem] text-customBlue opacity-70;
+    @apply font-light text-[1rem] leading-[1.75rem] text-customBlue opacity-70 text-center md:text-left max-w-[500px];
   }
 }
 
